# Predict-Energy-Consumption-under-Realistic-Operational-Conditions

./: README.md  pyproject.toml
base/hist_data_analysis/transformer/: eval.py  loader.py  model.py  stats.json  train.py  train_eval.py  train_eval_bio.py  utils.py
base/hist_data_analysis/transformer/models/: agg_test_vals.json
base/hist_data_analysis/transformer/models/1/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
base/hist_data_analysis/transformer/models/1045/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
base/hist_data_analysis/transformer/models/13/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
base/hist_data_analysis/transformer/models/20/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
base/hist_data_analysis/transformer/models/289/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
base/hist_data_analysis/transformer/models/29/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
base/hist_data_analysis/transformer/models/66/: test_checkpoints.json  test_vals.json  train_checkpoints.json  train_losses.json  transformer.pth
data_creation/: dataset_creation.py  dataset_creation_bio.py  nan_exploration.py
