[tool.poetry]
name = "predict-energy-consumption-under-realistic-operational-conditions"
version = "0.1.0"
description = ""
authors = ["tatiana-boura <tat.boura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
